--- a/app.json
+++ b/app.json
@@ -16,7 +16,9 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.z1p4u.NawarattApp"
+      "package": "com.z1p4u.NawarattApp",
+      "permissions": ["INTERNET"],
+      "usesCleartextTraffic": true
     },
     "web": {
       "bundler": "metro",
